fixed mobile not playing sound, if it's not 'preloaded' because AudioContext sucks on safari.

--- a/client/dashboard/less/Dashboard.less
+++ b/client/dashboard/less/Dashboard.less
@@ -77,6 +77,12 @@
       width: 80% !important;
       left: 10% !important;
     }
+    .not-on-mobile {
+      font-size: 2.5rem;
+      font-weight: bold;
+      text-align: center;
+      width: 100%;
+    }
     .mixboard-interface-row {
       margin: 10px 0;
       width: 100%;
